cambio en el logo

--- a/app.html
+++ b/app.html
@@ -43,10 +43,9 @@
                 <!-- parte superior de logo y nombre -->
                 <div class="col-10 py-2">
                     <nav class="navbar bg-body-tertiary rounded fondoSecciones">
-                        <a class="navbar-brand ms-auto" href="#">
-                            Irupé
-                            <!-- esta imagen tenemos que cambiarla, hacerla sin el fondo negro -->
-                            <img src="img/imgLogo.jpeg" alt="Logo" width="50" height="30" class="d-inline-block align-text-top">
+                         <a class="navbar-brand d-flex align-items-center ms-auto" href="#">
+                              <span class="me-2">IRUPÉ </span>
+                            <img src="img/imgLogo.png" alt="Logo" width="30" height="30">
                         </a>
                     </nav>
 
