--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         
         <!--  margen a la izquierda y arriba y abajo -->
         <div class=" ms-5 my-5" >
-            <h1 class="display-1 text-secondary no-seleccionable">Bienvenid@ a  <span class="d-block">[nombreapp]</span></h1>
+            <h1 class="display-1 text-secondary no-seleccionable">Bienvenid@ a  <span class="d-block">IRUPÉ<img src="img/imgLogo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top"></span></h1>
+            
         </div>
 
 
