--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     </head>
 
     <body>
-
-        
         <!--  margen a la izquierda y arriba y abajo -->
         <div class=" ms-5 my-5" >
-            <h1 class="display-1 text-secondary no-seleccionable">Bienvenid@ a  <span class="d-block">IRUPÉ<img src="img/imgLogo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top"></span></h1>
+            <h1 class="display-1 text-secondary no-seleccionable">
+                Bienvenid@ a  
+                <span class="d-block">
+                    IRUPÉ
+                    <img src="img/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
+                </span>
+            </h1>
             
         </div>
 
