--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
         <!-- iconos de boostrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
-        <!-- nuestro css -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
+
+         <!-- nuestro css -->
         <link rel="stylesheet" href="style.css">
+        
     </head>
 
     <body>
@@ -30,12 +33,9 @@
 
 
         <div class="position-absolute bottom-0 end-0  me-5 mb-5 d-flex align-items-center">
-            <h2 class="display-3 text-secondary">Comenzar</h2>
-
-            <!-- text-decoration-none saca el subrayado -->
-            <a class="text-decoration-none text-dark fs-1 ms-3" href="login.html">       
-                <!-- ícono de flechita -->
-               <i class="bi bi-arrow-right-circle-fill"></i>
+            <a class="btn btn-light btn-lg d-flex align-items-center gap-2 px-4 py-3 shadow" href="login.html">
+                <span class="fw-semibold">Comenzar</span>
+                <i class="bi bi-arrow-right-circle-fill fs-2"></i>
             </a>
         </div>
    
