--- a/index.html
+++ b/index.html
@@ -15,22 +15,20 @@
 
          <!-- nuestro css -->
         <link rel="stylesheet" href="style.css">
-        
+
     </head>
 
     <body>
         <!--  margen a la izquierda y arriba y abajo -->
-        <div class=" ms-5 my-5" >
-            <h1 class="display-1 text-secondary no-seleccionable">
-                Bienvenid@ a  
+        <div class=" ms-5 mt-5" >
+           <h1 class="display-1 text-secondary no-seleccionable">
+             Bienvenid@ a
                 <span class="d-block">
                     IRUPÉ
-                    <img src="img/logo.png" alt="Logo" width="100" height="100" class="d-inline-block align-text-top">
                 </span>
             </h1>
-            
+            <img class="d-block mx-auto" src="img/logo.png" alt="Logo" width="300" height="300">
         </div>
-
 
         <div class="position-absolute bottom-0 end-0  me-5 mb-5 d-flex align-items-center">
             <a class="btn btn-light btn-lg d-flex align-items-center gap-2 px-4 py-3 shadow" href="login.html">
@@ -38,7 +36,7 @@
                 <i class="bi bi-arrow-right-circle-fill fs-2"></i>
             </a>
         </div>
-   
+
 
         <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
