--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Login </title>
+        <title>IRUPÉ</title>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -17,7 +17,7 @@
             <div class="row w-100">
                 <div class="col-sm-10 col-md-7 col-lg-5 mx-auto">
 
-                    <div class="card shadow-lg p-4 p-md-5">
+                    <div class="card cardLoginLila shadow-lg p-4 p-md-5">
                         <div class="card-body">
                             <h2 class="card-title text-center mb-4">Iniciar Sesión</h2>
 
@@ -33,8 +33,11 @@
                                 </div>
                                 
                                 <div class="d-grid gap-2">
-                                    <button type="submit" class="btn btn-primary w-100"><em>Entrar</em></button>
+                                    <button type="submit" class="btn btn-lila w-100">
+                                        <em>Entrar</em>
+                                    </button>
                                 </div>
+
                             
                             </form>
                         </div>
