--- a/index.html
+++ b/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>nombreApp</title>
 
-        <!-- bootstrap -->
+        <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-        <!-- iconos de boostrap -->
+        <!-- iconos de Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap">
 
-         <!-- nuestro css -->
+        <!-- nuestro css -->
         <link rel="stylesheet" href="style.css">
-
     </head>
 
     <body>
-        <!--  margen a la izquierda y arriba y abajo -->
-        <div class=" ms-5 mt-5" >
-           <h1 class="display-1 text-secondary no-seleccionable">
-             Bienvenid@ a
-                <span class="d-block">
+        <!-- margen a la izquierda y arriba -->
+        <div class="ms-5 mt-5">
+            <h1 class="display-1 text-secondary user-select-none">
+                Bienvenid@ a
+                <span class="titulo-irupe d-block">
                     IRUPÉ
                 </span>
             </h1>
             <img class="d-block mx-auto" src="img/logo.png" alt="Logo" width="300" height="300">
         </div>
 
-        <div class="position-absolute bottom-0 end-0  me-5 mb-5 d-flex align-items-center">
-            <a class="btn btn-light btn-lg d-flex align-items-center gap-2 px-4 py-3 shadow" href="login.html">
+        <div class="position-absolute bottom-0 end-0 me-5 mb-5 d-flex align-items-center">
+            <a class="btn btn-lg d-flex align-items-center gap-2 px-4 py-3 shadow btn-comenzar" href="login.html">
                 <span class="fw-semibold">Comenzar</span>
                 <i class="bi bi-arrow-right-circle-fill fs-2"></i>
             </a>
         </div>
 
 
-        <!-- bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
+
 </html>
