--- a/app.html
+++ b/app.html
@@ -160,6 +160,6 @@
         <!-- Bootstrap JS -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         <script src="cerrarSesion.js"></script>
-        <script src="agregarTareas.js"></script> </body>
+        <script src="agregarTareas.js"></script> 
     </body>
 </html>
