borré clases demás

--- a/app.html
+++ b/app.html
@@ -73,37 +73,37 @@
                         <div class="d-flex justify-content-between align-items-center mb-4 text-center mx-3">
                             <div>
                                 <button id="fechaDomingo" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">D</div>
+                                <div class="m-4 fs-3 text-primary">D</div>
                             </div>
 
                             <div>            
                                 <button id="fechaLunes" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">L</div>
+                                <div class="m-4 fs-3 text-primary">L</div>
                             </div>
 
                             <div>
                                 <button id="fechaMartes" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">M</div>
+                                <div class="m-4 fs-3 text-primary">M</div>
                             </div>
 
                             <div>
                                 <button id="fechaMiercoles" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">M</div>
+                                <div class="m-4 fs-3 text-primary">M</div>
                             </div>
                             
                             <div>
                                 <button id="fechaJueves" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">J</div>
+                                <div class="m-4 fs-3 text-primary">J</div>
                             </div>
 
                             <div>
                                 <button id="fechaViernes" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">V</div>
+                                <div class="m-4 fs-3 text-primary">V</div>
                             </div>
                                 
                             <div>
                                 <button id="fechaSabado" class="btn rounded-circle p-3 text-white circuloFecha"></button>
-                                <div class="col rounded m-4 fs-3 text-primary">S</div>
+                                <div class="m-4 fs-3 text-primary">S</div>
                             </div>
                         </div>
                     </div>
@@ -164,3 +164,4 @@
         <script src="seteandoFechas.js" ></script>
     </body>
 </html>
+
