--- a/app.html
+++ b/app.html
@@ -175,14 +175,13 @@
         </div>
 
         <!-- SCRIPTS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-                crossorigin="anonymous">
-        </script>
-
-        <script src="cerrarSesion.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+        <script src="mockData.js"></script>
+        <script src="seteandoFechas.js"></script>  
+        <script src="app.js"></script>            
         <script src="agregarTareas.js"></script>
-        <script src="seteandoFechas.js"></script>
-    </body>
+        <script src="cerrarSesion.js"></script>
 
+
+    </body>
 </html>
