--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                                     <input type="password" class="form-control" id="passwordInput" placeholder="Contraseña" required>
                                 </div>
 
-                                <span id="error_mensaje" class="d-block text-center text-danger fw-bold mb-2"></span>
+                                <span id="error_message" class="d-block text-center text-danger fw-bold mb-2"></span>
                                 
 
                                 <div class="d-grid gap-2">
@@ -55,5 +55,6 @@
     
 
 </html>
+
 
 
