--- a/app.html
+++ b/app.html
@@ -167,7 +167,7 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <label class="form-label">Tarea</label>
-                        <input type="text" class="form-control campoModal" id="tareaNombre">
+                        <input type="text" class="form-control campoModal" id="tareaNombre" maxlength="40">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Fecha</label>
