--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                             <form>
                                 <div class="mb-3">
                                     <label for="emailInput" class="form-label">Correo Electrónico</label>
-                                    <input type="email" class="form-control" id="emailInput" placeholder="nombre@ejemplo.com" required>
+                                    <input type="email" class="form-control" id="emailInput" placeholder="Correo" required maxlength="50">
                                 </div>
 
                                 <div class="mb-4">
